# weiqi_pattern

./: Cargo.toml  readme.md
src/: lib.rs
